Se agrega efecto parallax

--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
         </div>
 
         <div class="row">
+            <div class="col-12 parallax">
+                <div class="parallax-int">
+                    <img class="w-100" src="assets/img/logoparallax.png" alt="" >
+                </div>
+            </div>
+        </div>
+        <div class="row">
             <img src="https://static.bandainamcoent.eu/high/elden-ring/elden-ring/00-page-setup/elden-ring-border-leaf.png" alt="">
         </div>
     </div>
