Se utiliza api spotify

--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@
 </body>
 <script src="./js/wow.min.js">
 
+</script>´
+<script src="./services/serviciospotify.js">
+
 </script>
 
               <script>
