--- a/musica.html
+++ b/musica.html
@@ -10,6 +10,7 @@
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="css/eldenicons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap"
@@ -31,7 +32,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./assets/Views/page1.html">Personajes</a>
@@ -64,15 +65,15 @@
     <footer class=" container-fluid">
   
         <div class="row">
-          <div class="col-12  text-center mt-5">
-            <h1>Contáctanos</h1>
+          <div class="col-12  text-center mt-5 ">
+            <h1 >Contáctanos</h1>
           </div>
         </div>
       <div class="row">
         <div class="col-12 col-md-3">
           <img src="assets/img/logo.png" class="w-100 img-fluid">
         </div>
-        <div class="col-12 col-md-3 ">
+        <div class="col-12 col-md-3 border border-2 border-secondary rounded-3">
           <h3>Juan Pablo Gómez</h3>
           <a href="https://github.com/clak-g" class="icon-github-circled redes "  target="_blank">
           clak-g
@@ -82,7 +83,7 @@
           </a>
           
         </div>
-        <div class="col-12 col-md-3 ">
+        <div class="col-12 col-md-3 border border-2 border-secondary rounded-3">
           <h3>Diego Vanegas</h3>
           <a href="https://github.com/tomyvanegas" class="icon-github-circled redes " target="_blank">
             tomyvanegas
@@ -91,7 +92,7 @@
               3106224962
             </h3>
         </div>
-        <div class="col-12 col-md-3">
+        <div class="col-12 col-md-3 border border-2 border-secondary rounded-3">
           <h3>David Sebastián Ruiz</h3>
           <a href="https://github.com/DavidSRV" class="icon-github-circled redes " target="_blank">
             DavidSRV
