Se agrega registro desde js con firebase

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title class="font">Elden Ring</title>
 </head>
 <body>
@@ -58,14 +61,14 @@
                 <img src="https://static.bandainamcoent.eu/high/elden-ring/elden-ring/00-page-setup/elden-ring-border-leaf.png" alt="">
             </div>
             <div class="row mt-5 mb-5 text-center text-light">
-                <h3 class="font">Características generales</h3>
+                <h3 >Características generales</h3>
             </div>
             <div class="row">
                 <div class="col-12 col-md-6 animate__animated animate__fadeInLeft wow">
                     <video class="w-100" loop muted autoplay src="https://static.bandainamcoent.eu/video/eldenring-kf-01-animated-new.webm"></video>
                 </div>
                 <div class="col-12 col-md-6 text-center text-light">
-                    <div class="textocar p-3 font"> <h5 class="bg-secondary  p-5 font">Un nuevo mundo de fantasía</h5>
+                    <div class="textocar p-3"> <h5 class="bg-secondary  p-5 font">Un nuevo mundo de fantasía</h5>
                     <p>Recorre las Tierras Intermedias, un nuevo mundo de fantasía ideado por Hidetaka Miyazaki, creador de la exitosa serie de videojuegos DARK SOULS, y por George R. R. Martin, autor de Canción de hielo y fuego, la serie de fantasía superventas según The New York Times. 
     
      
