--- a/musica.html
+++ b/musica.html
@@ -73,7 +73,7 @@
         <div class="col-12 col-md-3">
           <img src="assets/img/logo.png" class="w-100 img-fluid">
         </div>
-        <div class="col-12 col-md-3 border border-2 border-secondary rounded-3">
+        <div class="col-12 col-md-3 border  rounded-3">
           <h3>Juan Pablo Gómez</h3>
           <a href="https://github.com/clak-g" class="icon-github-circled redes "  target="_blank">
           clak-g
@@ -83,7 +83,7 @@
           </a>
           
         </div>
-        <div class="col-12 col-md-3 border border-2 border-secondary rounded-3">
+        <div class="col-12 col-md-3 border  rounded-3">
           <h3>Diego Vanegas</h3>
           <a href="https://github.com/tomyvanegas" class="icon-github-circled redes " target="_blank">
             tomyvanegas
@@ -92,7 +92,7 @@
               3106224962
             </h3>
         </div>
-        <div class="col-12 col-md-3 border border-2 border-secondary rounded-3">
+        <div class="col-12 col-md-3 border  rounded-3">
           <h3>David Sebastián Ruiz</h3>
           <a href="https://github.com/DavidSRV" class="icon-github-circled redes " target="_blank">
             DavidSRV
