--- a/registro.html
+++ b/registro.html
@@ -12,6 +12,15 @@
 </head>
 <body >
     <main class="registro">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1 id="usuario">
+
+            </h1>
+          </div>
+        </div>
+      </div>
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-5">
